--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "This is a package which GuaGua use to practice",
     "type": "library",
     "require": {
-        "php": "^7.2"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "php": "^7.2"
+        "php": ">=7.2"
     },
     "license": "MIT",
     "autoload": {
